# pu-py-n8n

./: .gitignore  Makefile  README.md  pyproject.toml  setup-structure.ps1
src/pu_py_n8n/: __init__.py  aks_cluster.py  config.py  main.py  n8n_deployment.py
tests/: __init__.py  conftest.py  test_aks_cluster.py  test_n8n_deployment.py
